Changed h1 and made it a header

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div id="wrapper"/>
 
-<h1>The VT-Shaped English Student</h1>
-
+    <header>
+<h1>My Spring 2017 courses</h1>
+    </header>
         <nav>
     <ul>
 <li>History of English</li>
